--- a/src/main/resources/com/example/peluqueria_app_desk/view_login.fxml
+++ b/src/main/resources/com/example/peluqueria_app_desk/view_login.fxml
@@ -13,31 +13,39 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="490.0" prefWidth="419.0" style="-fx-background-color: #D8BFD8;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.peluqueria_app_desk.LoginController">
+<AnchorPane prefHeight="490.0" prefWidth="419.0" style="-fx-background-color: #bae8e8;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.peluqueria_app_desk.LoginController">
    <children>
 
-      <TextField fx:id="txtCorreo" focusTraversable="true" layoutX="29.0" layoutY="226.0" onAction="#initialize" prefHeight="34.0" prefWidth="361.0" style="-fx-background-color: #B0E0E6; -fx-border-color: #FFDAB9;">
+      <TextField fx:id="txtCorreo" focusTraversable="true" layoutX="29.0" layoutY="226.0" onAction="#initialize" prefHeight="25.0" prefWidth="361.0" style="-fx-background-color: #ffffff;">
          <font>
             <Font name="Arial" size="12.0" />
          </font></TextField>
-      <Button fx:id="btnIngresar" layoutX="138.0" layoutY="402.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="49.0" prefWidth="147.0" style="-fx-background-color: #FF69B4; -fx-border-style: #FFDAB9;" text="Ingresar" textAlignment="CENTER">
+      <Button fx:id="btnIngresar" layoutX="138.0" layoutY="402.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="49.0" prefWidth="147.0" style="-fx-background-color: #7eb4d4;" text="Ingresar" textAlignment="CENTER">
          <font>
-            <Font name="Arial" size="12.0" />
+            <Font name="Arial Bold" size="12.0" />
          </font></Button>
-      <Label layoutX="30.0" layoutY="195.0" text="Ingrese el correo del empleado:" />
-      <Label layoutX="30.0" layoutY="283.0" text="Ingrese la contraseña:" />
+      <Label layoutX="30.0" layoutY="195.0" text="Ingrese el correo del empleado:">
+         <font>
+            <Font name="System Italic" size="16.0" />
+         </font></Label>
+      <Label layoutX="30.0" layoutY="283.0" text="Ingrese la contraseña:">
+         <font>
+            <Font name="System Italic" size="16.0" />
+         </font></Label>
       <Label fx:id="lblMensaje" layoutX="70.0" layoutY="335.0" />
-      <CheckBox fx:id="ckbMostrarPass" layoutX="212.0" layoutY="352.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="168.0" style="-fx-font: #4B4B4B;" text="Mostrar contraseña">
+      <CheckBox fx:id="ckbMostrarPass" layoutX="257.0" layoutY="352.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="162.0" style="-fx-font: #4B4B4B;" text="Mostrar contraseña">
          <font>
             <Font name="System Italic" size="12.0" />
          </font></CheckBox>
-      <StackPane layoutX="29.0" layoutY="310.0" prefHeight="34.0" prefWidth="361.0" style="-fx-background-color: #B0E0E6;">
+      <StackPane layoutX="29.0" layoutY="318.0" prefHeight="34.0" prefWidth="361.0">
          <children>
-            <TextField fx:id="txtPassVisible" prefHeight="25.0" prefWidth="236.0" style="-fx-background-color: #B0E0E6;" />
-            <PasswordField fx:id="txtPass" prefHeight="12.0" prefWidth="351.0" style="-fx-background-color: #B0E0E6; -fx-border-color: #FFDAB9;" />
+            <ImageView fitHeight="25.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="imgPass" fitHeight="25.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true" />
+            <TextField fx:id="txtPassVisible" prefHeight="25.0" prefWidth="329.0" style="-fx-background-color: #ffffff;" />
+            <PasswordField fx:id="txtPass" prefHeight="25.0" prefWidth="345.0" style="-fx-background-color: #ffffff;" />
          </children>
       </StackPane>
-      <MenuBar fx:id="menuBar" layoutX="-1.0" layoutY="2.0" prefHeight="43.0" prefWidth="419.0" style="-fx-background-color: #FAF3DD;">
+      <MenuBar fx:id="menuBar" layoutX="-1.0" layoutY="2.0" prefHeight="43.0" prefWidth="419.0" style="-fx-background-color: #e3f6f5;">
         <menus>
           <Menu mnemonicParsing="false" text="Inicio">
             <items>
@@ -61,7 +69,10 @@
             </Menu>
         </menus>
       </MenuBar>
-      <Label layoutX="160.0" layoutY="62.0" text="INICIO DE SESIÓN" />
+      <Label layoutX="145.0" layoutY="57.0" text="INICIO DE SESIÓN">
+         <font>
+            <Font name="System Bold Italic" size="15.0" />
+         </font></Label>
       <ImageView fx:id="imgLogin" fitHeight="103.0" fitWidth="124.0" layoutX="150.0" layoutY="85.0" pickOnBounds="true" preserveRatio="true" />
 
    </children>
